Updated regex-redux implementation to use stable Java 22+ Foreign APIs